--- a/index.html
+++ b/index.html
@@ -37,6 +37,56 @@
           <p> I am studying to become a Web Developer</p>
           <p> I would love to learn how to compose an app :)</p>
 
+          <div class="jumbotron-social">
+            <ul class="ul-social">
+              <li class="li-social-links">
+                <a class="social" href="https://github.com/kimyaf" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+              </li>
+            </div>
+          
+
+            
+
+
+
+
+
+
+
+<!-- CARD #1 -->
+<div class="project-card">
+  <div class="project-content">
+    <h4> Emoji Runner </h4>
+    <p> Emoji Runner is a game where you have to jump over obstacles to achieve a high score </p>
+    <a href="https://kimyaf.github.io/Emoji-Runner/">Link to GitHub </a>
+  </div>
+</div>
+<!-- CARD #2 -->
+<div class="project-card">
+  <div class="project-content">
+    <h4>Snip-it</h4>
+    <p> A social media network for people who code</p>
+    <a href="https://github.com/chaseyb/Coding-Society.git"></a>
+  </div>
+</div>
+
+<!-- END PROJECTS -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         </article>
       </div>
     </section>
