--- a/index.html
+++ b/index.html
@@ -61,14 +61,29 @@
     <a href="https://kimyaf.github.io/Emoji-Runner/">Link to GitHub </a>
   </div>
 </div>
+
+
+
 <!-- CARD #2 -->
 <div class="project-card">
   <div class="project-content">
     <h4>Snip-it</h4>
     <p> A social media network for people who code</p>
-    <a href="https://github.com/chaseyb/Coding-Society.git"></a>
+    <a href="https://github.com/chaseyb/Coding-Society.git"> Link </a>
   </div>
 </div>
+
+
+
+<!-- CARD #3 -->
+<div class="project-card">
+  <div class="project-content">
+    <h4>Book Look-Up</h4>
+    <p> Look up your favorite book</p>
+    <a href="https://kimyaf.github.io/Google-Books-React-Search/">Search</a>
+  </div>
+</div>
+
 
 <!-- END PROJECTS -->
 
@@ -140,7 +155,18 @@
 
 
 
-
+    <div class="row white box-shadow">
+      <div class="side-content"></div>
+      <div class="main-content">
+        <div class="content-header">
+          <a class="anchor" name="skills"></a>
+          <h2>Contact Information</h2>
+        </div>
+        <div class="content-body">
+          <ul class="ul-skills">
+        E-mail: kimyaf14@gamil.com
+        </ul>
+      </div>
 
 
 
