--- a/index.html
+++ b/index.html
@@ -90,41 +90,6 @@
 
 
 
-<!-- BEGIN SKILLS -->
-<div class="row white box-shadow">
-  <div class="side-content"></div>
-  <div class="main-content">
-    <div class="content-header">
-      <a class="anchor" name="skills"></a>
-      <h2>Skills</h2>
-    </div>
-    <div class="content-body">
-      <ul class="ul-skills">
-        <li class="li-skills">Javascript</li>
-        <li class="li-skills">HTML</li>
-        <li class="li-skills">CSS</li>
-        <li class="li-skills">React</li>
-        <li class="li-skills">Node.js</li>
-        <li class="li-skills">Bootstrap</li>
-        <li class="li-skills">Webpack</li>
-        <li class="li-skills">jQuery</li>
-        <li class="li-skills">Python</li>
-        <li class="li-skills">Algorithms</li>
-        <li class="li-skills">Data Structures</li>
-        <li class="li-skills">Java</li>
-        <li class="li-skills">Ruby on Rails</li>
-        <li class="li-skills">Swift</li>
-        <li class="li-skills">mySQL</li>
-        <li class="li-skills">R</li>
-        <li class="li-skills">C#</li>
-        <li class="li-skills">MongoDB</li>
-        <li class="li-skills">Mongoose</li>
-        <li class="li-skills">Databases</li>
-        <li class="li-skills">Data Visualization</li>
-        <li class="li-skills">Git and Command Line </li>
-        <li class="li-skills">Test Environments</li>
-      </ul>
-    </div>
 
 
 
@@ -414,13 +379,15 @@ v new portfolio -->
                         <img src="images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
-                    </div>
+                   
+<!-- CARD #1 -->
+<div class="project-card">
+    <div class="project-content">
+      <h4> Emoji Runner </h4>
+      <p> Emoji Runner is a game where you have to jump over obstacles to achieve a high score </p>
+      <a href="https://kimyaf.github.io/Emoji-Runner/">Link to GitHub </a>
+    </div>
+  </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
@@ -445,37 +412,42 @@ v new portfolio -->
     </div>
     <!-- End #projects -->
 
-    <div id="skills">
-        <h2 class="heading">Skills</h2>
-        <ul>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+    
+<!-- BEGIN SKILLS -->
+<div class="row white box-shadow">
+    <div class="side-content"></div>
+    <div class="main-content">
+      <div class="content-header">
+        <a class="anchor" name="skills"></a>
+        <h2>Skills</h2>
+      </div>
+      <div class="content-body">
+        <ul class="ul-skills">
+          <li class="li-skills">Javascript</li>
+          <li class="li-skills">HTML</li>
+          <li class="li-skills">CSS</li>
+          <li class="li-skills">React</li>
+          <li class="li-skills">Node.js</li>
+          <li class="li-skills">Bootstrap</li>
+          <li class="li-skills">Webpack</li>
+          <li class="li-skills">jQuery</li>
+          <li class="li-skills">Python</li>
+          <li class="li-skills">Algorithms</li>
+          <li class="li-skills">Data Structures</li>
+          <li class="li-skills">Java</li>
+          <li class="li-skills">Ruby on Rails</li>
+          <li class="li-skills">Swift</li>
+          <li class="li-skills">mySQL</li>
+          <li class="li-skills">R</li>
+          <li class="li-skills">C#</li>
+          <li class="li-skills">MongoDB</li>
+          <li class="li-skills">Mongoose</li>
+          <li class="li-skills">Databases</li>
+          <li class="li-skills">Data Visualization</li>
+          <li class="li-skills">Git and Command Line </li>
+          <li class="li-skills">Test Environments</li>
         </ul>
-    </div>
+      </div>
     <!-- End #skills -->
 
     <div id="contact">
